BEM + preventDefault on small form

--- a/public/css/locations.css
+++ b/public/css/locations.css
@@ -77,3 +77,23 @@
     background-image: url("/static/not-visited.png"); 
     background-size: cover; 
 }
+
+.visible
+{
+    visibility: visible;
+}
+
+.hidden
+{
+    visibility: hidden;
+}
+
+.shown
+{
+    display: flex;
+}
+
+.not-shown
+{
+    display: none;
+}
